<resources>
    <string name="play_button">OYNA !</string>
    <string name="game_title">BOMBİŞ TARLASI</string>
    <string name="loading">Yükleniyor</string>
    <string name="wanna_exit">Gerçekten çıkmak istiyor musunuz?</string>
    <string name="game_over">Malesef mayına bastın</string>
    <string name="game_win">Tebrikler tüm mayınları temizledin!</string>
    <string name="go_back">Geri dön</string>
    <string name="play_again">Yeniden Oyna</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="select_difficulty">Zorluk seviyesi seçiniz</string>
    <string name="mapEasy">7 x 7</string>
    <string name="mapMedium">9 x 9</string>
    <string name="mapHard">11 x 11</string>
    <string name="easy">Kolay</string>
    <string name="medium">Orta</string>
    <string name="hard">Zor</string>
    <string name="minesEasy">5 Mayın</string>
    <string name="minesMedium">10 Mayın</string>
    <string name="minesHard">20 Mayın</string>
    <string name="app_name">Mayın Tarlası</string>
    <string name="localscores">Yerel Skorlar</string>
    <string name="globalscores">Global Skorlar</string>
    <string name="noscoreyet">-</string>
    <string name="seconds">Saniye</string>
    <string name="howto">Nasıl oynanır?</string>
    <string name="ok">Tamam</string>
    <string name="tutorial_longpress">Uzun basarak bayrak koy.</string>
    <string name="tutorial_press">Dokunarak hücreleri aç.</string>
    <string name="donotshowagain">Bunu bir daha gösterme.</string>
    <string name="scores">Skorlar</string>
    <string name="score">Skor</string>
    <string name="difficulty">Zorluk:</string>
    <string name="UserID">UUID:</string>
</resources>
