<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@color/text_background"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="clip_horizontal|clip_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howto"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/background"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:text="@string/tutorial_press" />

            <ImageView
                android:id="@+id/tutor_tile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/button_backgrounds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tutor_longpress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:text="@string/tutorial_longpress" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/flag" />

        </LinearLayout>

        <Switch
            android:id="@+id/tutorial_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/donotshowagain"
            android:textColor="@color/primary_text_color" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_positive"
            android:text="@string/ok"
            android:textColor="@color/background" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>