<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="5dp"
    tools:context=".Scoreboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/title_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/background_tint"
            android:gravity="center|center_vertical"
            android:padding="10dp"
            android:text="@string/hard"
            android:textColor="@color/three_mine"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/hard_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|center_horizontal|center_vertical"
            android:padding="20dp"
            android:text="@string/noscoreyet"
            android:textColor="@color/primary_object_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/title_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/background_tint"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/medium"
            android:textColor="@color/two_mine"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/medium_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|center_horizontal|center_vertical"
            android:padding="20dp"
            android:text="@string/noscoreyet"
            android:textColor="@color/primary_object_color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/title_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/background_tint"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/easy"
            android:textColor="@color/one_mine"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/easy_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|center_horizontal|center_vertical"
            android:padding="20dp"
            android:text="@string/noscoreyet"
            android:textColor="@color/primary_object_color"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>