<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DifficultyActivity">

    <SeekBar
        android:id="@+id/seekbar_difficulty"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:max="2"
        android:paddingTop="10dp"
        android:progress="1"
        android:progressBackgroundTint="#DF2D2D"
        android:progressBackgroundTintMode="multiply"
        android:progressDrawable="@drawable/seekbar_style"
        android:soundEffectsEnabled="false"
        android:splitTrack="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_select_diffuculty" />

    <TextView
        android:id="@+id/text_select_diffuculty"
        android:layout_width="326dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="#8EFFFFFF"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/select_difficulty"
        android:textAllCaps="true"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_difficulty_minecount" />

    <TextView
        android:id="@+id/text_difficulty_mapsize"
        android:layout_width="260dp"
        android:layout_height="103dp"
        android:background="#8EFFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_difficulty_minecount"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#8EFFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:padding="5dp"
        android:shadowColor="@color/black"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/primary_object_color"
        app:layout_constraintEnd_toEndOf="@+id/text_difficulty_mapsize"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/text_difficulty_mapsize"
        app:layout_constraintTop_toBottomOf="@+id/text_difficulty_mapsize" />

    <TextView
        android:id="@+id/text_easy"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:background="#8EFFFFFF"
        android:shadowColor="@color/black"
        android:text="@string/easy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/seekbar_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_difficulty" />

    <TextView
        android:id="@+id/text_medium"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:background="#8EFFFFFF"
        android:shadowColor="@color/black"
        android:text="@string/medium"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/text_hard"
        app:layout_constraintStart_toEndOf="@+id/text_easy"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_difficulty" />

    <TextView
        android:id="@+id/text_hard"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:background="#8EFFFFFF"
        android:shadowColor="@color/black"
        android:text="@string/hard"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/seekbar_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_difficulty" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_backgrounds"
        android:contextClickable="true"
        android:text="@string/play_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_medium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_yellow_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>